# agentic-kubernetes-operator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  test-agent-deployment.yaml
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md
.github/workflows/: dev-build.yaml  docs.yaml  e2e-tests.yaml  go-tests.yaml  python-tests.yaml  release.yaml  reusable-tests.yaml  test-release.yaml
agent/: Dockerfile  Makefile  pyproject.toml
agent/examples/echo-agent/: .env.example  Makefile  README.md  agent.py  mcp_http_wrapper.py  requirements.txt
agent/examples/multi-agent-coordination/: .env.example  README.md  orchestrate.py
agent/examples/simple-math-agent/: .env.example  Makefile  README.md  agent.py
agent/server/: Dockerfile  Makefile  __init__.py  a2a.py  mcp_tools.py  pyproject.toml  server.py
agent/tests/: __init__.py  conftest.py  test_echo_agent.py  test_multi_agent.py
charts/: index.yaml
dev/: 404.html  README.html  hashmap.json  index.html
dev/assets/: app.iUKhcRdA.js  cli_commands.md.CCprkawX.js  cli_commands.md.CCprkawX.lean.js  operator_agent-crd.md.CWWD60WU.js  operator_agent-crd.md.CWWD60WU.lean.js  operator_mcpserver-crd.md.DuFemury.js  operator_modelapi-crd.md.DuOXT3PC.js  (+3 more)
docs/: Makefile  README.md  index.md  package.json
hack/: build-push-images.sh  install-gateway.sh  install-metallb.sh  run-e2e-tests.sh
kaos-cli/: pyproject.toml
model-api/: README.md
operator/: Dockerfile  Makefile  go.mod  main.go
python/: Dockerfile  Makefile  _test_mcp_server.py  pyproject.toml
tests/: e2e_local_test.py
(+190 files in other folders)
